k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nextjs-app
    namespace: nextjs
spec:
    replicas: 2
    selector:
        matchLabels:
            app: nextjs-app
    template:
        metadata:
            labels:
                app: nextjs-app
        spec:
            containers:
                - name: nextjs-app
                  image: docker.io/zayyen/nextjs-ci-app:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "512Mi"
                          cpu: "200m"
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 30
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 5
                      periodSeconds: 5
