k8s/inggres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nextjs-ingress
    namespace: nextjs-app
    annotations:
        kubernetes.io/ingress.class: traefik
        traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nextjs-service
                            port:
                                number: 80
