k8s/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nextjs-ingress
    namespace: nextjs
    annotations:
        kubernetes.io/ingress.class: "nginx"
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/proxy-body-size: "50m"
        nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    tls:
        - hosts:
              - fahreza-dev.web.id
          secretName: nextjs-tls
    rules:
        - host: fahreza-dev.web.id
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nextjs-service
                            port:
                                number: 80
