k8s/ingress-no-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nextjs-ingress
    namespace: nextjs-app
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web
        traefik.ingress.kubernetes.io/router.middlewares: nextjs-app-redirect@kubernetescrd
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nextjs-service
                            port:
                                number: 80
