k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nextjs-ingress
    namespace: nextjs
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/proxy-body-size: "50m"
        nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
    rules:
        - host: fahreza-dev.web.id
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nextjs-service
                            port:
                                number: 80
